.kubernetes/deployment.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juliana
  namespace: juliana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juliana
  template:
    metadata:
      labels:
        app: juliana
    spec:
      containers:
      - name: juliana
        image: jarzamendia/juliana:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.1"
          limits:
            memory: "256Mi"
            cpu: "0.2"
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
