.kubernetes/service.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: juliana
  namespace: juliana
  labels:
    app: juliana
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: juliana
